2009-10-22  David Marx  <itsdmarx@users.sourceforge.net>

	* src/wxterminal/wxt_gui.cpp:  _T() macro has been deprecated in favor
	of wxT().
	Bug #2883574

2009-10-18  Ethan A Merritt  <merritt@u.washington.edu>

	* VERSION FAQ.pdf src/version.c
	config/makefile.mgw configure.in docs/doc2texi.el docs/titlepag.tex

	Bump version of CVS development tree to 4.5

2009-10-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c: Initialize each new surface in a 3d dataset directly
	from the first surface.
	Bug #2876167

2009-10-14  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to gnuplot.doc rev 1.585

2009-10-10  Jost Brachert  <jotyc@users.sourceforge.net>

	* src/datafile.c (plot_option_index) docs/gnuplot.doc:
	Allow a blank trailing index spec to indicate "until end of file".

2009-10-10  Alexander Täschner  <taschna@users.sourceforge.net>

	* src/tabulate.c:  Fix tabular output of log scale data.
	Bug #2849166

2009-10-09  Thomas Sefzick <thse@users.sourceforge.net>

	* term/latex.trm:  Add an option for rotated text in the old latex
	terminal.  'set term latex rotate' enables it and turns off the 
	previous 'stacked' y-label mechanism.

2009-10-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_image_or_update_axes) demo/imageNaN.dem: 
	NaN/Inf values in the input are processed differently depending on
	whether they are read directly from the input file or generated by an 
	input expression.  Both cases should be treated equivalently for the
	purpose of IMAGE rendering.  
	NB: Fixes 2D case but not 3D case, as shown by revised imageNaN demo.
	Bug #2875069

2009-10-08  Ethan A Merritt  <merritt@u.washington.edu>

	* FAQ.pdf Makefile.am: FAQ.pdf replaces outdated FAQ

	* src/graph3d.c (do_3dplot): Explicit 'set xyplane at <z-value>' should
	be honored even if the x and y tics are turned off.
	Bugfix

	* src/graph3d.c (plot3drequest): Fixes spurious error from old tics,